# Image-database

./: .eslintrc.js  .gitignore  .postcssrc  Cargo.toml  README.md  build.rs  env_setup.sh  package.json  pre-commit
gui/: api.js  index.jsx  map.jsx  media.jsx  search.js  search.jsx  stylesheet.css  tags.jsx  upload.jsx  world_map.jsx
gui/css/: global.css  layout.css  media-list.css  media-view.css  tag-list.css  tag-search.css  upload.css  world-map.css
gui/widgets/: map.jsx  search.jsx
src/: api.js  api.rs  cli.rs  config.rs  coord.rs  entity.proto  error.rs  face_detection.rs  hash.rs  index.html  index.jsx  main.rs  media.jsx  metadata.rs  model.rs  search.js  stylesheet.css  tags.rs  thumbnail.rs  util.rs  web.rs
src/model/: mapper.rs  mod.rs  schema.rs  types.rs
