[package]
name = "backlog"
version = "0.1.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>"]
edition = "2018"

[dependencies]
actix-files = "0.2"
actix-rt = "1"
actix-web = "2"
anyhow = "1"
chrono = "0.4"
fraction = "0.6"
futures = "0.3"
image = "0.22"
imagepipe = "0.3"
kamadak-exif = "0.4"
regex = "1.3"
seamcarving = "0.2.2"
prost = "0.6"
prost-types = "0.6"
serde_json = "1.0"
structopt = "0.3"
tokio-postgres = "0.5"
toml = "0.5"
walkdir = "2"
tensorflow = "0.12.0"

[build-dependencies]
prost-build = { version = "0.6" }


[dependencies.postgres-types]
version = "0.1"
features = ["derive", "with-chrono-0_4"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.dev]
opt-level = 3
