[package]
name = "image_database"
version = "1.0.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>", "Christoffer Dalh <christoffer.dahl@cybercom.com>", "Johanna Hultberg <johanna.chultberg@gmail.com>", "Margareta Vi <margareta.vi@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.2"
actix-multipart = "0.2"
actix-protobuf = "0.5"
actix-rt = "1"
actix-web = "2"
anyhow = "1"
async-std = "1"
bytes = "0.5"
chrono = "0.4"
deunicode = "1"
env_logger = "0.7"
fraction = "0.6"
futures = "0.3"
image = "0.22"
imagepipe = "0.3"
kamadak-exif = "0.4"
rawloader = "0.36"
regex = "1.3"
rgeo = "0.2"
prost = "0.6"
prost-types = "0.6"
serde_json = "1.0"
sha3 = "0.8"
structopt = "0.3"
tensorflow = "0.12.0"
tokio-postgres = "0.5"
toml = "0.5"
walkdir = "2"

[build-dependencies]
prost-build = { version = "0.6" }


[dependencies.postgres-types]
version = "0.1"
features = ["derive", "with-chrono-0_4"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.dev]
opt-level = 3
